css/index.css
/* ... */
/* Styles for the basic search section.
------------------------------------------------- */
#searchform, #simple_search p
{
	padding: 0.5em;
	margin: 0;
}
#simple_search, #simple_search p, #advanced_search
{
	text-align: center !important;
	margin: 0;
}
#search_error
{
	font-style: italic;
	padding: 0.3em 1em;
}
#search_term_input
{
	font-size: 115%;
	margin: 0 0 1em;
}

/* Styles for the advanced search section.
------------------------------------------------- */
#searchform fieldset
{
	text-align: left;
	padding: 0;
	border: none;
}
#advanced_search dl#search_options
{
	margin: 0 auto;
	width: 600px;
	padding-top: 1em;
	overflow: hidden;
}
#advanced_search dt
{
	clear: both;
	float: left;
	padding: 0.2em;
	text-align: right;
	width: 20%;
}
#advanced_search dd
{
	width: 75%;
	float: left;
	padding: 0.2em;
	margin: 0 0 0 0.5em;
	text-align: left;
}
#searchform p.clear
{
	clear: both;
}
@media (max-width: 991px) {
	#advanced_search dd, #advanced_search dt
	{
		width: 100%;
	}
	#advanced_search dt
	{
		text-align: left;
	}
}

/* Styles for the search results page.
------------------------------------------------- */
.topic_table td blockquote, .topic_table td .quoteheader
{
	margin: 0.5em;
}
.search_results_posts
{
	overflow: hidden;
}
.search_results_posts .buttons
{
	padding: 5px 1em 0 0;
}

/* Styles for the help section.
------------------------------------------------- */

#help_container
{
	margin: 4px 0 0 0;
	padding: 0 0 8px 0;
}
#helpmain
{
	padding: 0 1em;
}
#helpmain p
{
	margin: 0 0 1.5em 0;
	line-height: 1.5em;
}
#helpmain ul
{
	line-height: 1.5em;
}

/* Styles for print media.
------------------------------------------------------- */
@media print
{
	#headerarea
	{
		display: none;
	}

	.tborder
	{
		border: none;
	}
}
#topbar{
	background: #88bb22;
	-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .075);
	box-shadow: 0 6px 12px rgba(0, 0, 0, .075);
	min-height: 60px;
	padding: 0;
	margin-bottom: 20px;
}

div#logo {
    height: 60px;
    width: 100%;
    text-align: center;
}
#logo img
{
    position: relative;
    right: 0;
    left: 0;
    margin-top: 5px;
    max-height: 50px;
}

@media (max-width: 320px) {
	div#logo {
		height: 43px;
		width: 100%;
		text-align: center;
	}
	#logo img
	{
		position: relative;
		right: 0;
		left: 0;
		margin-top: 11px;
		max-height: 43px;
	}
}

#topbar li a
{
	color: #fff;
	text-transform: uppercase;
	font-weight: lighter;
	font-size: 18px;
}
#topbar .sign-in a, #topbar .sign-in a:hover, #topbar .sign-in a:focus
{
	background-color: #1e1e1e;
}
#topbar .sign-out a, #topbar .sign-out a:hover, #topbar .sign-out a:focus
{
	background-color: #c9302c;
}
#topbar .register a, #topbar .register a:hover, #topbar .register a:focus
{
	background-color: #396112;
}
#topbar .search a, #topbar .search a:hover, #topbar .search a:focus
{
	color: #444;
	background: #FFF;
}
#topbar li a, .navbar-default .navbar-nav > li > a
{
	padding-top: 20px;
	padding-bottom: 20px;
}
#topbar .navbar-nav
{
	margin: 0;
}
@media (max-width: 767px)
{
	#topbar li a span
	{
		display: none;
	}	
	#topbar .nav li
	{
		display: table-cell;
	}
	#topbar li a
	{
		padding-top: 21px;
		padding-bottom: 21px;
	}
}
.search-form
{
	margin: 15px 12px 0 0;
}
.search-form .form-group {
  float: right !important;
  transition: all 0.35s, border-radius 0s;
  width: 32px;
  height: 32px;
  background-color: #dcffb9;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
  border-radius: 25px;
  border: 1px solid #ccc;
  color: #444;
}
.search-form .form-group input.form-control {
  padding-right: 20px;
  border: 0 none;
  background: transparent;
  box-shadow: none;
  display:block;
  color: #444;
}
.search-form .form-group input.form-control::-webkit-input-placeholder {
  display: none;
}
.search-form .form-group input.form-control:-moz-placeholder {
  /* Firefox 18- */
  display: none;
}
.search-form .form-group input.form-control::-moz-placeholder {
  /* Firefox 19+ */
  display: none;
}
.search-form .form-group input.form-control:-ms-input-placeholder {
  display: none;
}
.search-form .form-group:hover,
.search-form .form-group.hover {
  width: 100%;
  border-radius: 25px;
}
.search-form .form-group span.form-control-feedback {
  position: absolute;
  top: -2px;
  right: -2px;
  z-index: 2;
  display: block;
  width: 34px;
  height: 34px;
  line-height: 34px;
  text-align: center;
  color: #444;
  left: initial;
  font-size: 14px;
}
#topbar .dropdown-menu
{
	box-shadow: none;
	background-color: #1e1e1e;
	margin-top: -1px;
	border-color: #1e1e1e;
	width: 295px;
	padding: 10px;
	border-radius: 0 0 0 0;
}
#topbar .dropdown-menu input
{
	display: inline-block;
}
#topbar .dropdown-menu input.input_text,#topbar .dropdown-menu input.input_password
{
	background-color: #dcffb9;
	border-radius: 15px;
	border: 1px solid #ccc;
	padding: 6px 8px;
}
#topbar .dropdown-menu input[type="submit"]
{
	background: url(../images/login.png) center no-repeat;
	width: 40px; height: 34px;
	border: none;
	float: right;
}
@media (max-width: 767px)
{
	#topbar .dropdown-menu
	{
		position: absolute;
		margin-top: 0;
	}
}
.navbar-default
{
	background-color: #FFF;
	-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .075);
	box-shadow: 0 4px 10px rgba(0, 0, 0, .075);
	border-radius: 0 0 0 0;
	margin-bottom: 0;
}
.navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .dropdown-menu > li > a:focus,
.navbar-default .navbar-nav .dropdown-menu > li > a
{
	color: #444;
	font-weight: lighter;
	text-transform: uppercase;
}
.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus,
.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus
{
	background-color: #f8f7f7;
}
#button_logout,#button_login,#button_register, #button_profile, #button_help
{
	display: none;
}
/* ... */

